# ImageToPDF-Android-App

./: LICENSE.txt  README.md  local.properties
app/: build.gradle  proguard-rules.pro
app/libs/multipleimageselect/: multipleimageselect.aar
app/src/androidTest/java/com/kumazaku/pdfcreator/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/libharu/: CMakeLists.txt  libharu-jni.c
app/src/main/cpp/libharu/include/: hpdf_conf.h
app/src/main/java/com/kumazaku/pdfcreator/: MainActivity.java  PDFCreateActivity.java
app/src/main/java/com/kumazaku/pdfcreator/exceptions/: DuplicatedFileException.java  SizeTooHighException.java  SizeTooLowException.java  UnsupportedFileFormatException.java  UnsupportedFolderException.java
app/src/main/java/com/kumazaku/pdfcreator/utility/: LogHelper.java  Utility.java
app/src/main/java/com/kumazaku/pdfcreator/versionInfo/: VersionInfoActivity.java
app/src/main/java/com/kumazaku/pdfcreator/widget/: ImageListAdapter.java  ImageListData.java
app/src/main/res/drawable/: button.xml
app/src/main/res/layout/: activity_main.xml  activity_pdfcreate.xml  activity_version_info.xml  alert_dialog_with_checkbox.xml  filename_dialog.xml  image_layout.xml  pdf_layout.xml
app/src/main/res/raw/: licenseinfo.txt
app/src/main/res/values/: strings.xml
app/src/main/res/values-ja/: strings.xml
app/src/test/java/com/kumazaku/pdfcreator/: ExampleUnitTest.java
